--- a/app/views/dashboard/_mentee_dashboard.html.erb
+++ b/app/views/dashboard/_mentee_dashboard.html.erb
@@ -6,13 +6,20 @@
     Discover insights and stories from our mentors to inspire your own journey.
   </p>
   <div class="grid grid-cols-1 sm:grid-cols-2 gap-5">
+    <% available_mentors_count = 0 %>
     <% mentors_data.each do |mentor| %>
-    <%# TODO: Refactor (might need to modify user method model) %>
-      <% current_mentee_count = mentor.mentee_capacity_count(mentor.cohort) %>
+    <%# TODO: Refactor section below (might need to modify user methods in model or create new scope) %>
+      <% current_mentee_count = mentor.mentee_capacity_count(mentor.cohort.id) %>
       <% capacity_cap = mentor.capacity %>
-      <% if  current_mentee_count < capacity_cap %>
+      <% if current_user.cohort.running? == true && current_mentee_count < capacity_cap %>
         <%= render 'profile_card', mentor: mentor %>
+        <% available_mentors_count += 1 %>
       <% end %>
     <%end%>
+    <% if current_user.cohort.running? == false %>
+     <h2> Mentor matching is closed for cohort <%= current_user.cohort.id %> </h2>
+    <% elsif available_mentors_count == 0 %>
+      <h2> No more avaible mentors in cohort <%= current_user.cohort.id %> </h2>
+    <% end %>
   </div>
 </div>
