--- a/app/views/dashboard/_mentee_dashboard.html.erb
+++ b/app/views/dashboard/_mentee_dashboard.html.erb
@@ -1,4 +1,9 @@
 <div class="p-5">
+  <h1 class="text-2xl font-semibold text-[#202020] mb-1">Current User:</h1>
+  <h2>Name: <%= current_user.name %></h2>
+  <h2>ID: <%= current_user.id %></h2>
+  <h2>Cohort: <%= current_user.cohort.id %></h2>
+  <h2>Match?: <%= current_user.matched? %></h2>
   <h1 class="text-2xl font-semibold text-[#202020] mb-1">
     Available Mentors
   </h1>
