--- a/app/views/users/registrations/_mentee_form.html.erb
+++ b/app/views/users/registrations/_mentee_form.html.erb
@@ -36,7 +36,7 @@
       </div>
       <%= f.simple_fields_for :cohort_members, CohortMember.new do |cm| %>
         <%= cm.hidden_field :capacity, value: nil %>
-        <%= cm.hidden_field :role, value: 'Mentee' %>
+        <%= cm.hidden_field :role, value: 'mentee' %>
         <%= cm.hidden_field :cohort_id, value: Cohort.first.id %>
       <% end %>
       <div class="form-actions">
