--- a/app/views/users/registrations/_mentor_form.html.erb
+++ b/app/views/users/registrations/_mentor_form.html.erb
@@ -36,7 +36,7 @@
       </div>
       <%= f.simple_fields_for :cohort_members, CohortMember.new do |cm| %>
         <%= cm.input :capacity, required: true %>
-        <%= cm.hidden_field :role, value: 'Mentor' %>
+        <%= cm.hidden_field :role, value: 'mentor' %>
         <%= cm.hidden_field :cohort_id, value: Cohort.first.id %>
       <% end %>
       <div class="form-actions">
