fixed review section cards and added overflow effect

--- a/app/views/home/_faq.html.erb
+++ b/app/views/home/_faq.html.erb
@@ -11,7 +11,7 @@
          
           <div class="accordion-group">
             <div class="accordion pb-8 border-b border-solid border-gray-200" id="accordion-1">
-              <button class="accordion-toggle group inline-flex items-center justify-between text-xl font-normal leading-8 text-gray-600 w-full transition duration-500 hover:text-indigo-600" aria-controls="content-1">
+              <button class="accordion-toggle group inline-flex items-center justify-between text-xl font-normal leading-8 text-gray-600 w-full transition duration-500" aria-controls="content-1">
                 <h5>How can i contact the DPI team?</h5>
                 <span class="icon text-gray-900 transition duration-500">+</span>
               </button>
@@ -22,7 +22,7 @@
               </div>
             </div>
             <div class="accordion py-8 border-b border-solid border-gray-200" id="accordion-2">
-              <button class="accordion-toggle group inline-flex items-center justify-between text-xl font-normal leading-8 text-gray-600 w-full transition duration-500 hover:text-indigo-600" aria-controls="content-2">
+              <button class="accordion-toggle group inline-flex items-center justify-between text-xl font-normal leading-8 text-gray-600 w-full transition duration-500" aria-controls="content-2">
                 <h5>What services do you offer?</h5>
                 <span class="icon text-gray-900 transition duration-500">+</span>
               </button>
@@ -32,9 +32,10 @@
                 </p>
               </div>
             </div>
+
             <div class="accordion py-8 border-b border-solid border-gray-200" id="accordion-3">
-              <button class="accordion-toggle group inline-flex items-center justify-between text-xl font-normal leading-8 text-gray-600 w-full transition duration-500 hover:text-indigo-600" aria-controls="content-3">
-                <h5>Do you provide website maintenance services?</h5>
+              <button class="accordion-toggle group inline-flex items-center justify-between text-xl font-normal leading-8 text-gray-600 w-full transition duration-500" aria-controls="content-3">
+                <h5>Do you provide maintenance services?</h5>
                 <span class="icon text-gray-900 transition duration-500">+</span>
               </button>
               <div id="content-3" class="accordion-content w-full px-0 overflow-hidden pr-4" style="max-height: 0; transition: max-height 0.5s ease;">
@@ -44,7 +45,7 @@
               </div>
             </div>
             <div class="accordion py-8" id="accordion-4">
-              <button class="accordion-toggle group inline-flex items-center justify-between text-xl font-normal leading-8 text-gray-600 w-full transition duration-500 hover:text-indigo-600" aria-controls="content-4">
+              <button class="accordion-toggle group inline-flex items-center justify-between text-xl font-normal leading-8 text-gray-600 w-full transition duration-500" aria-controls="content-4">
                 <h5>What is the payment process?</h5>
                 <span class="icon text-gray-900 transition duration-500">+</span>
               </button>
