--- a/app/views/home/_reviews.html.erb
+++ b/app/views/home/_reviews.html.erb
@@ -21,7 +21,7 @@
   <div class="lg:flex grid grid-cols-1 md:grid-cols-3 justify-center items-center gap-8 swiper mySwiper">
     <div class="swiper-wrapper">
       
-      <div class="swiper-slide group bg-white border border-solid border-gray-300 rounded-2xl p-8 transition-all duration-500 w-full hover:border-indigo-600 slide-active:border-indigo-600">
+      <div class="swiper-slide group bg-white border border-solid border-gray-300 rounded-2xl p-8 transition-all duration-500 w-full hover:border-black slide-active:border-black">
         <img class="w-1/2 h-1/2 mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
         <p class="text-lg text-gray-500 leading-8 h-24 transition-all duration-500 mb-9 group-hover:text-gray-800">
           I was hesitant to try pagedone at first, but I'm so glad I did - it's exceeded all of my expectations.
@@ -29,12 +29,12 @@
         <div class="flex items-center gap-5">
           <img class="rounded-full object-cover" src="https://pagedone.io/asset/uploads/1696229994.png" alt="avatar" />
           <div class="grid gap-1">
-            <h5 class="text-gray-900 font-medium transition-all duration-500 group-hover:text-indigo-600 swiper-slide-active:text-indigo-600">Harsh P.</h5>
+            <h5 class="text-gray-900 font-medium transition-all duration-500 group-hover:text-black swiper-slide-active:text-black">Harsh P.</h5>
             <span class="text-sm leading-6 text-gray-500">Product Designer</span>
           </div>
         </div>
       </div>
-      <div class="swiper-slide group bg-white border border-solid border-gray-300 rounded-2xl p-8 transition-all duration-500 w-full hover:border-indigo-600 slide-active:border-indigo-600">
+      <div class="swiper-slide group bg-white border border-solid border-gray-300 rounded-2xl p-8 transition-all duration-500 w-full hover:border-black slide-active:border-black">
         <img class="w-1/2 h-1/2 mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
         <p class="text-lg text-gray-500 leading-8 h-24 transition-all duration-500 mb-9 group-hover:text-gray-800">
           I was hesitant to try pagedone at first, but I'm so glad I did - it's exceeded all of my expectations.
@@ -42,12 +42,12 @@
         <div class="flex items-center gap-5">
           <img class="rounded-full object-cover" src="https://pagedone.io/asset/uploads/1696229994.png" alt="avatar" />
           <div class="grid gap-1">
-            <h5 class="text-gray-900 font-medium transition-all duration-500 group-hover:text-indigo-600 swiper-slide-active:text-indigo-600">Harsh P.</h5>
+            <h5 class="text-gray-900 font-medium transition-all duration-500 group-hover:text-black swiper-slide-active:text-black">Harsh P.</h5>
             <span class="text-sm leading-6 text-gray-500">Product Designer</span>
           </div>
         </div>
       </div>
-      <div class="swiper-slide group bg-white border border-solid border-gray-300 rounded-2xl p-8 transition-all duration-500 w-full hover:border-indigo-600 slide-active:border-indigo-600">
+      <div class="swiper-slide group bg-white border border-solid border-gray-300 rounded-2xl p-8 transition-all duration-500 w-full hover:border-black slide-active:border-black">
         <img class="w-1/2 h-1/2 mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
         <p class="text-lg text-gray-500 leading-8 h-24 transition-all duration-500 mb-9 group-hover:text-gray-800">
           I was hesitant to try pagedone at first, but I'm so glad I did - it's exceeded all of my expectations.
@@ -55,12 +55,12 @@
         <div class="flex items-center gap-5">
           <img class="rounded-full object-cover" src="https://pagedone.io/asset/uploads/1696229994.png" alt="avatar" />
           <div class="grid gap-1">
-            <h5 class="text-gray-900 font-medium transition-all duration-500 group-hover:text-indigo-600 swiper-slide-active:text-indigo-600">Harsh P.</h5>
+            <h5 class="text-gray-900 font-medium transition-all duration-500 group-hover:text-black swiper-slide-active:text-black">Harsh P.</h5>
             <span class="text-sm leading-6 text-gray-500">Product Designer</span>
           </div>
         </div>
       </div>
-      <div class="swiper-slide group bg-white border border-solid border-gray-300 rounded-2xl p-8 transition-all duration-500 w-full hover:border-indigo-600 slide-active:border-indigo-600">
+      <div class="swiper-slide group bg-white border border-solid border-gray-300 rounded-2xl p-8 transition-all duration-500 w-full hover:border-black slide-active:border-black">
         <img class="w-1/2 h-1/2 mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
         <p class="text-lg text-gray-500 leading-8 h-24 transition-all duration-500 mb-9 group-hover:text-gray-800">
           I was hesitant to try pagedone at first, but I'm so glad I did - it's exceeded all of my expectations.
@@ -68,7 +68,7 @@
         <div class="flex items-center gap-5">
           <img class="rounded-full object-cover" src="https://pagedone.io/asset/uploads/1696229994.png" alt="avatar" />
           <div class="grid gap-1">
-            <h5 class="text-gray-900 font-medium transition-all duration-500 group-hover:text-indigo-600 swiper-slide-active:text-indigo-600">Harsh P.</h5>
+            <h5 class="text-gray-900 font-medium transition-all duration-500 group-hover:text-black swiper-slide-active:text-black">Harsh P.</h5>
             <span class="text-sm leading-6 text-gray-500">Product Designer</span>
           </div>
         </div>
@@ -78,7 +78,7 @@
 </section>
 <script>
   var swiper = new Swiper(".mySwiper", {
-      slidesPerView: 3,
+      slidesPerView: 1,
       spaceBetween: 28,
       centeredSlides: true,
       loop: true,
@@ -97,12 +97,12 @@
               centeredSlides: false,
           },
           768: {
-              slidesPerView: 2,
+              slidesPerView: 1.5,
               spaceBetween: 28,
               centeredSlides: true,
           },
           1024: {
-              slidesPerView: 3,
+              slidesPerView: 1.5,
               spaceBetween: 32,
           },
       },
