fixed hero section gradient css error

--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -1,8 +1,7 @@
-  
-<div class="flex flex-col items-center justify-center w-full">
+<div class="flex flex-col items-center justify-center w-full relative">
   <div class="gradient gradient-left"></div>
   <div class="gradient gradient-right"></div>
-  <h1 class="hero-title text-center w-full md:w-3/4 lg:w-1/2 text-5xl md:text-6xl mt-16">
+  <h1 class="font-light text-center w-full md:w-3/4 lg:w-1/2 text-5xl md:text-6xl mt-16">
     Transform potential into progress through <span class="font-bold">MentE</span>
   </h1>
   <div class="mt-8 flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4">
