--- a/app/views/home/_reviews.html.erb
+++ b/app/views/home/_reviews.html.erb
@@ -22,7 +22,7 @@
     <div class="swiper-wrapper">
       
       <div class="swiper-slide group bg-white border border-solid border-gray-300 rounded-2xl p-8 transition-all duration-500 w-full hover:border-black slide-active:border-black">
-        <img class="w-1/2 h-1/2 mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
+        <img class="w-[9rem] h-[3rem] mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
         <p class="text-lg text-gray-500 leading-8 h-24 transition-all duration-500 mb-9 group-hover:text-gray-800">
           I was hesitant to try pagedone at first, but I'm so glad I did - it's exceeded all of my expectations.
         </p>
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="swiper-slide group bg-white border border-solid border-gray-300 rounded-2xl p-8 transition-all duration-500 w-full hover:border-black slide-active:border-black">
-        <img class="w-1/2 h-1/2 mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
+        <img class="w-[9rem] h-[3rem] mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
         <p class="text-lg text-gray-500 leading-8 h-24 transition-all duration-500 mb-9 group-hover:text-gray-800">
           I was hesitant to try pagedone at first, but I'm so glad I did - it's exceeded all of my expectations.
         </p>
@@ -48,7 +48,7 @@
         </div>
       </div>
       <div class="swiper-slide group bg-white border border-solid border-gray-300 rounded-2xl p-8 transition-all duration-500 w-full hover:border-black slide-active:border-black">
-        <img class="w-1/2 h-1/2 mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
+        <img class="w-[9rem] h-[3rem] mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
         <p class="text-lg text-gray-500 leading-8 h-24 transition-all duration-500 mb-9 group-hover:text-gray-800">
           I was hesitant to try pagedone at first, but I'm so glad I did - it's exceeded all of my expectations.
         </p>
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div class="swiper-slide group bg-white border border-solid border-gray-300 rounded-2xl p-8 transition-all duration-500 w-full hover:border-black slide-active:border-black">
-        <img class="w-1/2 h-1/2 mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
+        <img class="w-[9rem] h-[3rem] mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
         <p class="text-lg text-gray-500 leading-8 h-24 transition-all duration-500 mb-9 group-hover:text-gray-800">
           I was hesitant to try pagedone at first, but I'm so glad I did - it's exceeded all of my expectations.
         </p>
