created admin dashboard and sidebar sections

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,16 +1,17 @@
-<% if @role == 'mentor' %>
+<% if @role == "mentor" %>
   <h1>Welcome, Mentor!</h1>
-  <%@mentors_data.each do |mentor|%>
-    <h3><%=mentor.user_id%></h3>
-  <%end%>
-<% elsif @role == 'mentee' %>
-  <%= render partial: "mentee_dashboard", locals: {mentors_data: @mentors_data}%>
-<% elsif @role == 'admin' %>
+  <% @mentors_data.each do |mentor| %>
+    <h3><%= mentor.user_id %></h3>
+  <% end %>
+<% elsif @role == "mentee" %>
+  <%= render partial: "mentee_dashboard", locals: { mentors_data: @mentors_data } %>
+<% elsif @role == "admin" %>
   <h1>Welcome, Admin!</h1>
-  <%@admins_data.each do |admin|%>
-    <h3><%=admin.user_id%></h3>
-  <%end%>
+  <% @admins_data.each do |admin| %>
+    <h3><%= admin.user_id %></h3>
+  <% end %>
   <!-- Admin Partial Views Here-->
+  <%= render partial: "admin_dashboard" %>
 <% else %>
   <h1>Role not recognized.</h1>
 <% end %>
