--- a/app/views/dashboard/_mentee_dashboard.html.erb
+++ b/app/views/dashboard/_mentee_dashboard.html.erb
@@ -1,11 +1,11 @@
-<div class="p-5">
+<div class="p-5 max-w-[55rem]">
   <h1 class="text-2xl font-semibold text-[#202020] mb-1">
     Available Mentors
   </h1>
   <p class="text-sm text-[#898989] mb-5">
     Discover insights and stories from our mentors to inspire your own journey.
   </p>
-  <div class="grid grid-cols-1 sm:grid-cols-2 gap-5">
+  <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
     <% mentors_data.each do |mentor|%>
       <%= render 'profile_card', mentor: mentor %>
     <%end%>
