--- a/app/views/profile/_profile.html.erb
+++ b/app/views/profile/_profile.html.erb
@@ -20,14 +20,14 @@
           <p class="text-xs text-[#202020]">Discovery Partners Institute</p>
         </div>
         <!-- TODO <p><%#= user.company %></p> -->
-        <div class="grid grid-cols-1 gap-1.5 sm:grid-cols-2 sm:gap-4">
+        <div class="grid grid-cols-1 gap-2 sm:grid-cols-2 sm:gap-4">
           <div class="flex gap-1">
-            <img src="<%= asset_path('icon/LinkedIn.svg') %>" alt="LinkedIn" class="max-w-15 max-h-15">
-            <p class="text-xs text-[#202020] whitespace-nowrap"><a href="<%= user.linkedin_link %>"><%= user.linkedin_link %></a></p>
+            <img src="<%= asset_path('icon/LinkedIn.svg') %>" alt="LinkedIn" class="max-w-15 max-h-15 mr-1">
+            <p class="text-xs text-[#202020] text-pretty hover:font-normal"><a href="<%= user.linkedin_link %>"><%= user.linkedin_link %></a></p>
           </div>
           <div class="flex gap-1">
             <img src="<%= asset_path('icon/mail.svg') %>" alt="mail" class="max-w-13 max-h-14">
-            <p class="text-xs text-[#202020]"><a href="mailto:<%= user.email %>"><%= user.email %></a></p>
+            <p class="text-xs text-[#202020] hover:font-normal"><a href="mailto:<%= user.email %>"><%= user.email %></a></p>
           </div>
         </div>
       </div>
