added styling to the sign up page

--- a/app/views/home/_reviews.html.erb
+++ b/app/views/home/_reviews.html.erb
@@ -21,7 +21,7 @@
   <div class="lg:flex grid grid-cols-1 md:grid-cols-3 justify-center items-center gap-8 swiper mySwiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide group bg-white rounded-2xl p-8 w-full  ">
-        <img class="w-[9rem] h-[3rem] mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
+        <img class="w-[9rem] h-[3rem] mb-4" src=<%= asset_path("sample_img/dpi_logo.png") %> alt="Logo" />
         <p class="text-lg text-gray-500 leading-8 h-24 mb-9">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo         </p>
         <div class="flex items-center gap-5">
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="swiper-slide group bg-white rounded-2xl p-8  w-full">
-        <img class="w-[9rem] h-[3rem] mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
+        <img class="w-[9rem] h-[3rem] mb-4" src=<%= asset_path("sample_img/dpi_logo.png") %> alt="Logo" />
         <p class="text-lg text-gray-500 leading-8 h-24 mb-9">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo         </p>
       </p>
@@ -46,7 +46,7 @@
       </div>
     </div>
     <div class="swiper-slide group bg-white rounded-2xl p-8 w-full">
-      <img class="w-[9rem] h-[3rem] mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
+      <img class="w-[9rem] h-[3rem] mb-4" src=<%= asset_path("sample_img/dpi_logo.png") %> alt="Logo" />
       <p class="text-lg text-gray-500 leading-8 h-24 mb-9 ">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo         </p>
     </p>
@@ -59,7 +59,7 @@
     </div>
   </div>
   <div class="swiper-slide group bg-white rounded-2xl p-8 w-full ">
-    <img class="w-[9rem] h-[3rem] mb-4" src=<%= asset_path("dpi_logo.png") %> alt="Logo" />
+    <img class="w-[9rem] h-[3rem] mb-4" src=<%= asset_path("sample_img/dpi_logo.png") %> alt="Logo" />
     <p class="text-lg text-gray-500 leading-8 h-24 mb-9 ">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo         </p>
   </p>
