--- a/app/views/users/registrations/signup.html.erb
+++ b/app/views/users/registrations/signup.html.erb
@@ -1,10 +1,37 @@
-<h1>Sign Up NOW!</h1>
-<div data-controller="signup">
-  <h2>Mentor or Mentee?</h2>
-  <button data-action="signup#showForm" data-signup-content-param="mentorForm">Mentor</button>
-  <button data-action="signup#showForm" data-signup-content-param="menteeForm">Mentee</button>
-  <div style="margin-top: 5px">
-    <div data-signup-target="mentorForm" style="display: hidden;"><%= render partial: "users/registrations/mentor_form" %></div>
-    <div data-signup-target="menteeForm"><%= render partial: "users/registrations/mentee_form"%></div>
+<div class="bg-white flex justify-center w-full">
+  <div class="relative bg-white w-full min-h-screen flex flex-col lg:flex-row-reverse">
+    <div class="w-full lg:w-[653px] min-h-full bg-gradient-to-b from-[#517879] to-[#1e3e57]">
+      <div class="flex justify-center items-center h-full">
+        <%= image_tag 'sample_img/dpi_logo_2.png', class: "mx-auto", alt: "DPI Logo" %>
+      </div>
+    </div>
+
+    <div class="flex flex-col items-center w-full lg:w-[671px] px-4 lg:px-12 py-12">
+      
+      <div data-controller="signup">
+        <button class="w-full lg:w-[150px] h-10 bg-[#27485d] text-white font-bold rounded shadow-sm" data-action="signup#showForm" data-signup-content-param="mentorForm">
+          Mentor Sign-up
+        </button>
+        
+        <button class="w-full lg:w-[150px] h-10 bg-[#27485d] text-white font-bold rounded shadow-sm" data-action="signup#showForm" data-signup-content-param="menteeForm">
+          Mentee Sign-up
+        </button>
+
+        <div>
+          <div data-signup-target="mentorForm" style="display: hidden;">
+            <%= render partial: "users/registrations/mentor_form" %>
+          </div>
+          <div data-signup-target="menteeForm">
+            <%= render partial: "users/registrations/mentee_form" %>
+          </div>
+        </div>
+      </div>
+
+      <div class="mt-8 flex items-center justify-center space-x-2">
+        <span class="text-gray-400 font-bold">Already a user?</span>
+        <a href="#" class="text-[#476d73] font-bold underline">Login</a>
+      </div>
+    </div>
+
   </div>
 </div>
