--- a/app/views/users/registrations/signup.html.erb
+++ b/app/views/users/registrations/signup.html.erb
@@ -9,12 +9,12 @@
     <div class="flex flex-col items-center w-full lg:w-[671px] px-4 lg:px-12 py-12">
       
       <div data-controller="signup">
-        <button class="w-full lg:w-[150px] h-10 bg-[#27485d] text-white font-bold rounded shadow-sm" data-action="signup#showForm" data-signup-content-param="mentorForm">
-          Mentor Sign-up
-        </button>
-        
-        <button class="w-full lg:w-[150px] h-10 bg-[#27485d] text-white font-bold rounded shadow-sm" data-action="signup#showForm" data-signup-content-param="menteeForm">
+        <button class="w-full lg:w-[150px] h-10 bg-[#517879] text-white font-bold rounded shadow-sm hover:bg-[#3e6176]" data-action="signup#showForm" data-signup-content-param="menteeForm">
           Mentee Sign-up
+        </button>
+      
+        <button class="w-full lg:w-[150px] h-10 bg-[#517879] text-white font-bold rounded shadow-sm hover:bg-[#3e6176]" data-action="signup#showForm" data-signup-content-param="mentorForm">
+          Mentor Sign-up
         </button>
 
         <div>
