--- a/app/views/cohorts/_form.html.erb
+++ b/app/views/cohorts/_form.html.erb
@@ -1,9 +1,10 @@
-<%= form_with(model: cohort) do |form| %>
+<%= form_with(model: cohort, class: "space-y-4") do |form| %>
   <% if cohort.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(cohort.errors.count, "error") %> prohibited this cohort from being saved:</h2>
-
-      <ul>
+    <div class="bg-red-100 text-red-700 p-4 rounded-lg">
+      <h2 class="font-semibold mb-2">
+        <%= pluralize(cohort.errors.count, "error") %> prohibited this cohort from being saved:
+      </h2>
+      <ul class="list-disc pl-5">
         <% cohort.errors.each do |error| %>
           <li><%= error.full_message %></li>
         <% end %>
@@ -11,42 +12,50 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :program_id, style: "display: block" %>
-    <%= form.number_field :program_id %>
+  <div class="flex flex-col">
+    <%= form.label :program_id, class: "font-medium mb-1" %>
+    <%= form.number_field :program_id,
+                          class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
 
-  <div>
-    <%= form.label :cohort_name, style: "display: block" %>
-    <%= form.text_field :cohort_name %>
+  <div class="flex flex-col">
+    <%= form.label :cohort_name, class: "font-medium mb-1" %>
+    <%= form.text_field :cohort_name,
+                        class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
 
-  <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_area :description %>
+  <div class="flex flex-col">
+    <%= form.label :description, class: "font-medium mb-1" %>
+    <%= form.text_area :description,
+                       class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
 
-  <div>
-    <%= form.label :start_date, style: "display: block" %>
-    <%= form.datetime_field :start_date %>
+  <div class="flex flex-col">
+    <%= form.label :start_date, class: "font-medium mb-1" %>
+    <%= form.datetime_field :start_date,
+                            class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
 
-  <div>
-    <%= form.label :end_date, style: "display: block" %>
-    <%= form.datetime_field :end_date %>
+  <div class="flex flex-col">
+    <%= form.label :end_date, class: "font-medium mb-1" %>
+    <%= form.datetime_field :end_date,
+                            class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
 
-  <div>
-    <%= form.label :creator_id, style: "display: block" %>
-    <%= form.number_field :creator_id %>
+  <div class="flex flex-col">
+    <%= form.label :creator_id, class: "font-medium mb-1" %>
+    <%= form.number_field :creator_id,
+                          class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
 
-  <div>
-    <%= form.label :contact_id, style: "display: block" %>
-    <%= form.number_field :contact_id %>
+  <div class="flex flex-col">
+    <%= form.label :contact_id, class: "font-medium mb-1" %>
+    <%= form.number_field :contact_id,
+                          class: "border border-gray-300 rounded-lg p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="flex justify-end">
+    <%= form.submit "Save Cohort",
+                    class: "bg-gray-800 hover:bg-black text-white font-semibold px-4 py-2 rounded-lg transition duration-300" %>
   </div>
 <% end %>
