updated profile cards and added building svg

--- a/app/views/dashboard/_program_card.html.erb
+++ b/app/views/dashboard/_program_card.html.erb
@@ -2,9 +2,13 @@
   <img class="w-full h-[5.538]" src="<%= asset_path("sample_img/dpi_building.png") %>" alt="Dpi building">
   <div class="px-6 py-4">
     <p class="text-xs text-gray-400">Program name</p>
-    <div class="font-bold text-xl mb-2 mt-2">Dpi Cohort 5</div> 
-    <p class="text-gray-700 text-base">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.
+    <div class="text-base font-semibold mb-2 mt-2">Dpi Cohort 5</div> 
+    <p class="text-[0.875rem] text-wrap text-[#898989] font-400 mb-2">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
     </p>
+    <button class="text-xs w-[8.75rem] h-[32px] bg-[#202020] text-[#FFFFFF] border border-transparent rounded-md hover:bg-transparent hover:text-[#202020] hover:border-[#202020]"
+            onclick="location.href='#'">
+      Apply Pairing
+    </button>
   </div>
 </div>
