--- a/app/views/dashboard/_user_card.html.erb
+++ b/app/views/dashboard/_user_card.html.erb
@@ -9,8 +9,8 @@
         </div>
     </div>
     <div class="-mx-6 border-t border-[#DCDCDC] mt-6"></div>
-    <div>
-        
+    <div class="flex flex-start align-center mt-[0.75rem]">
+        <img src="<%= asset_path("icon/building.svg") %>" alt="Building logo" class="mr-1">
         <p class="text-xs text-400">Discovery Partners Institute</p>
     </div>
 </div>
