test line: displays program names

--- a/app/views/dashboard/_admin_dashboard.html.erb
+++ b/app/views/dashboard/_admin_dashboard.html.erb
@@ -1,3 +1,5 @@
+<%= @programs_by_admin.first.name%>
+
 <div class="flex justify-center p-8">
   <!-- Sidebar -->
     <%= render partial: "admin_sidebar" %>
