--- a/app/views/dashboard/_admin_sidebar.html.erb
+++ b/app/views/dashboard/_admin_sidebar.html.erb
@@ -74,7 +74,23 @@
   </div>
 </div>
 
-<!-- Modal Popup -->
+<!-- Modal Popups -->
+<div 
+  id="programListModal" 
+  class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50"
+>
+  <div class="bg-white p-8 rounded-lg shadow-lg w-[30rem] relative">
+    <button 
+      class="absolute top-2 right-2 text-gray-500 hover:text-gray-700"
+      onclick="closeModal('programListModal')"
+    >
+      <i class="fas fa-times"></i>
+    </button>
+  
+    
+  </div>
+</div>
+
 <div 
   id="createCohortModal" 
   class="fixed inset-0 bg-black bg-opacity-50 hidden items-center justify-center z-50"
